--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <main class="wrapper">
         <h1>Welcome back!</h1>
+        <p>This is a paragraph about stuff for review</p>
     </main>
 </body>
 </html>
